--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/camialexisf/SCL021-memory-match",
   "name": "memory-match",
   "version": "1.0.0",
   "description": "Memory Match Game",
@@ -8,6 +9,7 @@
     "pretest": "eslint .",
     "test": "jest --coverage",
     "start": "serve src/",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d src"
   },
   "devDependencies": {
@@ -15,7 +17,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "babel-jest": "^27.0.1",
     "eslint": "^8.3.0",
-    "gh-pages": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "jest": "^27.5.1",
     "serve": "^13.0.2"
   },
